--- a/app/src/main/res/layout/activity_batch_details.xml
+++ b/app/src/main/res/layout/activity_batch_details.xml
@@ -127,7 +127,7 @@
                                 android:gravity="start" />
                         </LinearLayout>
                     </LinearLayout>
-                <LinearLayout
+              <!--  <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -161,7 +161,7 @@
                                             android:text="Actual"
                                             android:gravity="start" />
                                     </LinearLayout>
-                    </LinearLayout>
+                    </LinearLayout>-->
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -235,7 +235,7 @@
                                                     android:gravity="start" />
                                             </LinearLayout>
                                 </LinearLayout>
-                                <LinearLayout
+                              <!--  <LinearLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical">
@@ -271,7 +271,7 @@
                                             android:text="Actual"
                                             android:gravity="start" />
                              </LinearLayout>
-                            </LinearLayout>
+                            </LinearLayout>-->
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
