--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,6 +69,52 @@
 
         </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="bottom"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:id="@+id/current_batch_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
+                    android:text="Batch Status"
+                    android:gravity="center|bottom"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_13sdp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:gravity="right"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:gravity="bottom"
+                        android:layout_height="wrap_content">
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/add_new_batch"
+                            android:layout_width="wrap_content"
+                            android:padding="@dimen/_5sdp"
+                            android:layout_height="@dimen/_35sdp"
+                            android:textColor="@color/green"
+                            android:textAllCaps="false"
+                            android:background="@color/white"
+                            android:visibility="gone"
+                            android:text="Add New Batch"
+                           />
+                    </LinearLayout>
+                </LinearLayout>
+                </RelativeLayout>
+            </LinearLayout>
+
         </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -324,7 +370,7 @@
             android:layout_marginTop="@dimen/_5sdp"
             app:cardCornerRadius="@dimen/_10sdp"
             app:cardElevation="@dimen/_5sdp"
-            android:layout_marginBottom="@dimen/_150sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_marginLeft="@dimen/_5sdp"
             app:cardBackgroundColor="@color/blue_sky"
             android:layout_marginRight="@dimen/_5sdp">
@@ -360,6 +406,20 @@
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Product"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:textStyle="bold"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_marginBottom="@dimen/_150sdp"
+            android:layout_height="wrap_content"
+            android:id="@+id/recylcer_product"/>
 
 
 
