--- a/app/src/main/res/layout/item_subscription.xml
+++ b/app/src/main/res/layout/item_subscription.xml
@@ -120,7 +120,7 @@
                             android:textSize="@dimen/_18sdp"
                             android:layout_marginLeft="@dimen/_10sdp"
                             android:textColor="@color/white"
-                            android:text="0"/>
+                            android:text="₹0"/>
                         <!-- <TextView
                              android:id="@+id/discount_plan"
                              android:layout_width="wrap_content"
